[package]
name = "xlai-qts-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/yetanother.ai/xlai"
description = "Qwen3 TTS inference (GGUF + GGML) — engine and native TtsModel bridge."
publish = false

[features]
default = ["openblas", "cuda", "hip", "openvino"]
metal = ["xlai-sys-ggml/metal"]
vulkan = ["xlai-sys-ggml/vulkan"]
native = ["xlai-sys-ggml/native"]
openblas = ["xlai-sys-ggml/openblas"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
cann = ["ort/cann"]
coreml = ["ort/coreml"]
cuda = ["xlai-sys-ggml/cuda", "ort/cuda"]
directml = ["ort/directml"]
migraphx = ["ort/migraphx"]
nnapi = ["ort/nnapi"]
onednn = ["ort/onednn"]
openvino = ["xlai-sys-ggml/openvino", "ort/openvino"]
qnn = ["ort/qnn"]
rknpu = ["ort/rknpu"]
hip = ["xlai-sys-ggml/hip"]
rocm = ["hip", "ort/rocm"]
tensorrt = ["ort/tensorrt"]
tvm = ["ort/tvm"]
vitis = ["ort/vitis"]
xnnpack = ["ort/xnnpack"]

[dependencies]
async-stream.workspace = true
tracing.workspace = true
xlai-core.workspace = true
xlai-qts-manifest.workspace = true
xlai-sys-ggml.workspace = true
thiserror.workspace = true
rand.workspace = true
hound.workspace = true
rustfft.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
ort.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
criterion.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xlai-runtime.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }

[[bench]]
name = "synthesize"
harness = false
